[バックエンド]channelにルーティングを通した
